k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-spring-kotlin-microservice
spec:
  selector:
    matchLabels:
      app: sample-spring-kotlin-microservice
  template:
    metadata:
      labels:
        app: sample-spring-kotlin-microservice
    spec:
      containers:
      - name: sample-spring-kotlin-microservice
        image: quay.io/adhis/java-spring:latest
        ports:
        - containerPort: 8080
