k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: maven-get-project-version
  name: maven-get-project-version
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: maven-get-project-version
    weight: 100
